--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -5,16 +5,16 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="Soka"
-      content="Workout Buddies made easy"
-    />
+    <meta name="Soka" content="Workout Buddies made easy" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link
+      href="https://api.mapbox.com/mapbox-gl-js/v2.4.1/mapbox-gl.css"
+      rel="stylesheet"
+    />
     <title>Soka | Social Karma</title>
   </head>
   <body>
     <div id="root"></div>
-
   </body>
 </html>
