--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -12,6 +12,12 @@
       href="https://api.mapbox.com/mapbox-gl-js/v2.4.1/mapbox-gl.css"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap"
+      rel="stylesheet"
+    />
     <title>Soka | Social Karma</title>
   </head>
   <body>
